# ip-box

./: .gitignore  README.md  pyproject.toml
ip_box/: __main__.py  git_username.py  github_client.py  month.py  pull_request.py  write_project_description.py
ip_box/projects/: __init__.py  generate_dataframe.py  write_description.py
